fault-injection/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
spec:
  hosts:
    - "*"
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
    match:
    - headers:
        end-user:
          exact: jason
    route:
      - destination:
          host: dev-hello-service
          subset: v1
  - route:
      - destination:
          host: dev-hello-service
          subset: v1
